--- a/index.html
+++ b/index.html
@@ -454,9 +454,8 @@ Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's so
                 <img src="./packages/images/portfolio2.png" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
-                    <h3 class="portfolio__title">Brand Design</h3>
-                    <p class="portfolio__description">Tesla Clone is adaptable to all devices, with 
-                        ui components and animated interactions.</p>
+                    <h3 class="portfolio__title">Talk2Icons</h3>
+                    <p class="portfolio__description">A web application which allows users to engage in interactive conversations with custom AI characters.</p>
                     <a href="#" class="button button--flex button--small portfolio__button">
                         Demo
                         <i class="uil uil-arrow-right button__icon"></i>
