--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's so
             <!--==================== PORTFOLIO 3 ====================-->
         
             <div class="portfolio__content grid swiper-slide">
-                <img src="./packages/images/portfolio2.png" alt="" class="portfolio__img">
+                <img src="./packages/images/Screenshot%202024-06-23%20153202.png" alt="" class="portfolio__img">
 
                 <div class="portfolio_">
                     <h3 class="portfolio__title">Talk2Icons</h3>
