--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Abhishek Singh</h1>
                             <h3 class="home__subtitle">Programmer and Web  Developer</h3>
-                            <p class="home__description">I am Abhishek Singh, a web developer and programmer from the Institute of Engineering and Technology, Lucknow, skilled in HTML, CSS, JavaScript, C++, C, Java, Python, and DSA. I also serve as the Deputy Supervisor of Parmarth, the college's social club, where I lead various community initiatives.</p>
+                            <p class="home__description">I am Abhishek Singh, a web developer and programmer from the Institute of Engineering and Technology, Lucknow, skilled in HTML, CSS, JavaScript, MERN, C++, C, Java, Python, and DSA. I also serve as the Deputy Supervisor of Parmarth, the college's social club, where I lead various community initiatives.</p>
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
@@ -132,7 +132,7 @@
                     <img src="packages/images/Abhishek_main.jpg" alt="" class="about__img">
                     <div class="about__data">
                         <p class="about__description">
-                            I am Abhishek Singh, a web developer and programmer from the Institute of Engineering and Technology, Lucknow. My expertise includes HTML, CSS, JavaScript, C++, C, Java, Python, and Data Structures and Algorithms (DSA). I am passionate about technology and continually strive to enhance my skills in web development and programming. <br> <br>
+                            I am Abhishek Singh, a web developer and programmer from the Institute of Engineering and Technology, Lucknow. My expertise includes HTML, CSS, JavaScript, MERN, C++, C, Java, Python, and Data Structures and Algorithms (DSA). I am passionate about technology and continually strive to enhance my skills in web development and programming. <br> <br>
 
 Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's social club. In this role, I lead and participate in various social initiatives, organizing events and projects aimed at community betterment. This experience has enriched my leadership and teamwork skills, allowing me to balance my technical pursuits with meaningful social contributions.
                         </p>
