--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's so
 
                 <div class="skills__container container grid">
                     <div>
-                         <!--==================== SKILL-1 ====================-->
-                        <div class="skills__content skills__open">
+                       <!--==================== SKILL-1 ====================-->
+                     <!--      <div class="skills__content skills__open">
                             <div class="skills__header">
                                 <i class="uil uil-analytics skills__icon"></i>
                                <div>
@@ -216,7 +216,7 @@ Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's so
                                    </div>
                                </div>
                             </div>
-                        </div>
+                        </div> -->
                          <!--==================== SKILLS 2 ====================-->
                         <div class="skills__content skills__close">
                             <div class="skills__header">
