--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Beyond academics, I serve as the Deputy Supervisor of Parmarth, our college's so
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
                 <h2 class="section__title">Skills</h2>
-                <span class="section__subtitle">My technical level</span>
+             <!--      <span class="section__subtitle">My technical level</span>
 
                 <div class="skills__container container grid">
                     <div>
